[package]
name = "trade-tracker"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trade-tracker-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
black_scholes = "0.5"
clap = { version = "3.0.0-beta.2", git = "https://github.com/clap-rs/clap/" }
clipboard = "0.5"
dirs = "3.0"
reqwest = { version = "0.11", features = ["blocking"] }
rust_decimal = "1.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
time = { version = "0.2", features = [ "serde", "std" ] }

