[package]
name = "trade-tracker"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trade-tracker-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
black_scholes = "0.10"
clap = { version = "3.0.0-beta.2", git = "https://github.com/clap-rs/clap/" }
dirs = "3.0"
hex = { version = "0.4", features = [ "serde" ] }
minreq = { version = "2.6", features = ["https"] }
rust_decimal = "1.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
time = { version = "0.2", features = [ "serde", "std" ] }
tungstenite = { version = "0.18", features = [ "rustls-tls-webpki-roots" ] }

